--- a/WorkflowMVC/WorkflowMVC.csproj
+++ b/WorkflowMVC/WorkflowMVC.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\TicketCreator.cshtml" />
+    <Content Include="Views\Home\TicketList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
