--- a/WorkflowMVC/Views/Web.config
+++ b/WorkflowMVC/Views/Web.config
@@ -25,7 +25,9 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
-
+  <connectionStrings>
+    <add name="WorkFlowContext" providerName = "MySql.Data.MySqlClient" connectionString = "server=localhost;userid=root;password=Admin;database=workflowdb;persistsecurityinfo=True"/>
+  </connectionStrings>
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
