--- a/WorkflowMVC/Web.config
+++ b/WorkflowMVC/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="WorkFlowContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;userid=root;password=Admin;database=workflowdb;persistsecurityinfo=True" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
