--- a/WorkflowMVC/WorkflowMVC.csproj
+++ b/WorkflowMVC/WorkflowMVC.csproj
@@ -170,8 +170,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="MapMethods\ModelsMapper.cs" />
-    <Compile Include="Models\Ticket.cs" />
-    <Compile Include="Models\WebTicketContent.cs" />
+    <Compile Include="Models\WebTicketHeader.cs" />
+    <Compile Include="Models\WebTicketBody.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
