--- a/WorkFlowMySql/App.config
+++ b/WorkFlowMySql/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="WorkFlowContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;userid=root;password=Admin;database=workflowdb;persistsecurityinfo=True" />
+    <add name="WorkFlowContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;userid=root;password=Admin;database=workflowdb2;persistsecurityinfo=True" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
