--- a/WorkflowMVC/Web.config
+++ b/WorkflowMVC/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="WorkFlowContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;userid=root;password=Admin;database=workflowdb;persistsecurityinfo=True" />
+    <add name="WorkFlowContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;userid=root;password=Admin;database=workflowdb2;persistsecurityinfo=True" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
