--- a/WorkFlowMySql/WorkFlowMySql.csproj
+++ b/WorkFlowMySql/WorkFlowMySql.csproj
@@ -114,6 +114,10 @@
     <Compile Include="Migrations\201711221743281_asdsassa.Designer.cs">
       <DependentUpon>201711221743281_asdsassa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711292005211_sada.cs" />
+    <Compile Include="Migrations\201711292005211_sada.Designer.cs">
+      <DependentUpon>201711292005211_sada.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="WorkFlowContext.cs" />
     <Compile Include="GUI\FrmLoginMenu.cs">
@@ -150,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711221743281_asdsassa.resx">
       <DependentUpon>201711221743281_asdsassa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711292005211_sada.resx">
+      <DependentUpon>201711292005211_sada.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
