Pole email przy jestestracji

--- a/WorkFlowMySql/WorkFlowMySql.csproj
+++ b/WorkFlowMySql/WorkFlowMySql.csproj
@@ -118,6 +118,10 @@
     <Compile Include="Migrations\201711292005211_sada.Designer.cs">
       <DependentUpon>201711292005211_sada.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712031921490_adsaas.cs" />
+    <Compile Include="Migrations\201712031921490_adsaas.Designer.cs">
+      <DependentUpon>201712031921490_adsaas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="WorkFlowContext.cs" />
     <Compile Include="GUI\FrmLoginMenu.cs">
@@ -157,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711292005211_sada.resx">
       <DependentUpon>201711292005211_sada.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712031921490_adsaas.resx">
+      <DependentUpon>201712031921490_adsaas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
