--- a/WorkFlowMySql/WorkFlowMySql.csproj
+++ b/WorkFlowMySql/WorkFlowMySql.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\EmailServiceMethods.cs" />
     <Compile Include="BLL\LogEventMethods.cs" />
     <Compile Include="BLL\TicketCreator.cs" />
     <Compile Include="BLL\TicketServiceMethods.cs" />
@@ -122,6 +123,10 @@
     <Compile Include="Migrations\201712031921490_adsaas.Designer.cs">
       <DependentUpon>201712031921490_adsaas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712041240119_asdad.cs" />
+    <Compile Include="Migrations\201712041240119_asdad.Designer.cs">
+      <DependentUpon>201712041240119_asdad.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="WorkFlowContext.cs" />
     <Compile Include="GUI\FrmLoginMenu.cs">
@@ -164,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712031921490_adsaas.resx">
       <DependentUpon>201712031921490_adsaas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712041240119_asdad.resx">
+      <DependentUpon>201712041240119_asdad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
