--- a/WorkFlowMySql/packages.config
+++ b/WorkFlowMySql/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="Moq" version="4.7.145" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.4" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net461" />
+  <package id="NUnit" version="3.9.0" targetFramework="net461" />
 </packages>
