--- a/WorkFlowMySql/App.config
+++ b/WorkFlowMySql/App.config
@@ -29,6 +29,10 @@
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.10.4.0" newVersion="6.10.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.7.145.0" newVersion="4.7.145.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
